--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/server/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/vite-project/$1"
     }
   ]
 }
