--- a/vercel.json
+++ b/vercel.json
@@ -6,18 +6,14 @@
       "use": "@vercel/react"
     },
     {
-      "src": "server/index.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/vite-project/$1"
+      "dest": "/api/index.js"
     }
   ]
 }
