--- a/vite-project/vercel.json
+++ b/vite-project/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "source": "/api/:path*", "destination": "/api/:path*" }]
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
 }
